# planwrite-v2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bookwave.html  docker-compose.yml  issues.md  pyproject.toml  railway-entrypoint.sh
.github/workflows/: railway-deploy.yml
app/: __init__.py  cli.py  config.py  database.py  main.py
app/api/: admin.py  articles.py  events.py  generate.py  odds.py  offers.py  prediction_markets.py
app/models/: __init__.py  article.py  job.py  offer.py  style_profile.py  usage_event.py
app/schemas/: __init__.py  article.py  offer.py  outline.py
app/services/: bam_offers.py  bc_core.py  competitor_scraper.py  compliance.py  (+20 more)
data/: action_rag_urls.txt  articles_index.shape.json  articles_meta.jsonl  evergreen.jsonl  evergreen_action_network.jsonl  evergreen_fantasy_labs.jsonl  evergreen_goal_com.jsonl  evergreen_rotogrinders.jsonl  evergreen_sportshandle.jsonl  evergreen_vegas_insider.jsonl  property_internal_links_seed.txt
docs/: hetzner-tailscale-tunnel.md
scripts/: build_property_link_indexes.py  build_rag_index.py  check_py311_grammar.py
storage/: bam_offers_cache.pkl  evergreen_index.json  evergreen_index_action_network.json  evergreen_index_fantasy_labs.json  evergreen_index_rotogrinders.json  evergreen_index_sportshandle.json  evergreen_index_vegas_insider.json  evergreen_vectors.npy  evergreen_vectors_action_network.npy  evergreen_vectors_fantasy_labs.npy  evergreen_vectors_rotogrinders.npy  evergreen_vectors_sportshandle.npy  evergreen_vectors_vegas_insider.npy
tests/: __init__.py  conftest.py
(+145 files in other folders)
