[project]
name = "planwrite-v2"
version = "2.0.0"
description = "Automated content creation system with FastAPI + HTMX"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "aiosqlite>=0.19.0",

    # AI/ML
    "openai>=1.47.0",
    "tiktoken>=0.7.0",
    "faiss-cpu>=1.7.4",

    # Data processing
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.2.1",

    # Web scraping
    "beautifulsoup4>=4.12.3",
    "trafilatura>=1.7.0",
    "httpx>=0.27.0",

    # Export
    "python-docx>=1.1.1",
    "markupsafe>=2.1.5",

    # Background jobs
    "arq>=0.25.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "httpx>=0.27.0",
    "respx>=0.20.2",
    "ruff>=0.2.1",
]

[project.scripts]
dev = "uvicorn app.main:app --reload"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
